--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - First Valentine</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css?family=Codystar:300,400|Concert+One&amp;subset=latin-ext" rel="stylesheet"><link rel="stylesheet" href="./style.css">
 
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <html>
 
 <head>
@@ -229,4 +239,9 @@
         timer();
         setInterval(timer, 1000);
     </script>
+</html>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
 </html>
