--- a/al❤hann_gaming.html
+++ b/al❤hann_gaming.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Second Valentaine: Gaming with AL</title>
+  <title>Second Valentine's: Gaming with AL</title>
   <link rel="stylesheet" href="./style_2val.css">
 
 </head>
